k8s/kube_project/Ingress/workloads.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  replicas: 1

  selector:
    matchLabels:
      app: queue

  template: # template for thd pods
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:resources
        resources:
          requests:
            memory: 300Mi
            cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  replicas: 1

  selector:
    matchLabels:
      app: position-simulator

  template: # template for thd pods
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:resources
        resources:
          requests:
            memory: 200Mi
            cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  replicas: 1

  selector:
    matchLabels:
      app: position-tracker

  template: # template for thd pods
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
      - name: position-tracker
        image: richardchesterwood/k8s-fleetman-position-tracker:resources
        resources:
          requests:
            memory: 200Mi
            cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template: # template for thd pods
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: richardchesterwood/k8s-fleetman-api-gateway:resources
        resources:
          requests:
            memory: 200Mi
            cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1

  selector:
    matchLabels:
      app: webapp

  template: # template for thd pods
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release2
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
