k8s/kube_project/Ingress/ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-basic

spec:
  rules:
  - host: fleetman.com # edit /etc/hosts add minikube ip mapped to fleetman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-webapp
          servicePort: 80
